generated/grammar/LanguageParser.cpp

// Generated from grammar/Language.g4 by ANTLR 4.13.2


#include "LanguageListener.h"

#include "LanguageParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LanguageParserStaticData final {
  LanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LanguageParserStaticData(const LanguageParserStaticData&) = delete;
  LanguageParserStaticData(LanguageParserStaticData&&) = delete;
  LanguageParserStaticData& operator=(const LanguageParserStaticData&) = delete;
  LanguageParserStaticData& operator=(LanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag languageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<LanguageParserStaticData> languageParserStaticData = nullptr;

void languageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (languageParserStaticData != nullptr) {
    return;
  }
#else
  assert(languageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LanguageParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "variableDeclaration", "functionDeclaration", 
      "assignment", "loopStatement", "printStatement", "returnStatement", 
      "block", "parameterList", "parameter", "condition", "expression", 
      "term", "factor", "type", "comparisonOp"
    },
    std::vector<std::string>{
      "", "'let'", "':'", "';'", "'fn'", "'('", "')'", "'->'", "'='", "'for'", 
      "'while'", "'printf'", "','", "'return'", "'{'", "'}'", "'int'", "'float'", 
      "'str'", "'bool'", "'void'", "'<'", "'<='", "'>'", "'>='", "'=='", 
      "'!='", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "ADD", "SUB", "MUL", "DIV", 
      "ID", "INT", "FLOAT", "STRING", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  languageParserStaticData = std::move(staticData);
}

}

LanguageParser::LanguageParser(TokenStream *input) : LanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LanguageParser::LanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *languageParserStaticData->atn, languageParserStaticData->decisionToDFA, languageParserStaticData->sharedContextCache, options);
}

LanguageParser::~LanguageParser() {
  delete _interpreter;
}

const atn::ATN& LanguageParser::getATN() const {
  return *languageParserStaticData->atn;
}

std::string LanguageParser::getGrammarFileName() const {
  return "Language.g4";
}

const std::vector<std::string>& LanguageParser::getRuleNames() const {
  return languageParserStaticData->ruleNames;
}

const dfa::Vocabulary& LanguageParser::getVocabulary() const {
  return languageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LanguageParser::getSerializedATN() const {
  return languageParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::ProgramContext::EOF() {
  return getToken(LanguageParser::EOF, 0);
}

std::vector<LanguageParser::StatementContext *> LanguageParser::ProgramContext::statement() {
  return getRuleContexts<LanguageParser::StatementContext>();
}

LanguageParser::StatementContext* LanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<LanguageParser::StatementContext>(i);
}


size_t LanguageParser::ProgramContext::getRuleIndex() const {
  return LanguageParser::RuleProgram;
}

void LanguageParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LanguageParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

LanguageParser::ProgramContext* LanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2147495442) != 0)) {
      setState(34);
      statement();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(LanguageParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

LanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::VariableDeclarationContext* LanguageParser::StatementContext::variableDeclaration() {
  return getRuleContext<LanguageParser::VariableDeclarationContext>(0);
}

LanguageParser::FunctionDeclarationContext* LanguageParser::StatementContext::functionDeclaration() {
  return getRuleContext<LanguageParser::FunctionDeclarationContext>(0);
}

LanguageParser::AssignmentContext* LanguageParser::StatementContext::assignment() {
  return getRuleContext<LanguageParser::AssignmentContext>(0);
}

LanguageParser::LoopStatementContext* LanguageParser::StatementContext::loopStatement() {
  return getRuleContext<LanguageParser::LoopStatementContext>(0);
}

LanguageParser::PrintStatementContext* LanguageParser::StatementContext::printStatement() {
  return getRuleContext<LanguageParser::PrintStatementContext>(0);
}

LanguageParser::ReturnStatementContext* LanguageParser::StatementContext::returnStatement() {
  return getRuleContext<LanguageParser::ReturnStatementContext>(0);
}


size_t LanguageParser::StatementContext::getRuleIndex() const {
  return LanguageParser::RuleStatement;
}

void LanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void LanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

LanguageParser::StatementContext* LanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, LanguageParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LanguageParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        variableDeclaration();
        break;
      }

      case LanguageParser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        functionDeclaration();
        break;
      }

      case LanguageParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(44);
        assignment();
        break;
      }

      case LanguageParser::T__8:
      case LanguageParser::T__9: {
        enterOuterAlt(_localctx, 4);
        setState(45);
        loopStatement();
        break;
      }

      case LanguageParser::T__10: {
        enterOuterAlt(_localctx, 5);
        setState(46);
        printStatement();
        break;
      }

      case LanguageParser::T__12: {
        enterOuterAlt(_localctx, 6);
        setState(47);
        returnStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

LanguageParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::VariableDeclarationContext::ID() {
  return getToken(LanguageParser::ID, 0);
}

LanguageParser::TypeContext* LanguageParser::VariableDeclarationContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}


size_t LanguageParser::VariableDeclarationContext::getRuleIndex() const {
  return LanguageParser::RuleVariableDeclaration;
}

void LanguageParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void LanguageParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}

LanguageParser::VariableDeclarationContext* LanguageParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, LanguageParser::RuleVariableDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(LanguageParser::T__0);
    setState(51);
    match(LanguageParser::ID);
    setState(52);
    match(LanguageParser::T__1);
    setState(53);
    type();
    setState(54);
    match(LanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

LanguageParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::FunctionDeclarationContext::ID() {
  return getToken(LanguageParser::ID, 0);
}

LanguageParser::TypeContext* LanguageParser::FunctionDeclarationContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}

LanguageParser::BlockContext* LanguageParser::FunctionDeclarationContext::block() {
  return getRuleContext<LanguageParser::BlockContext>(0);
}

LanguageParser::ParameterListContext* LanguageParser::FunctionDeclarationContext::parameterList() {
  return getRuleContext<LanguageParser::ParameterListContext>(0);
}


size_t LanguageParser::FunctionDeclarationContext::getRuleIndex() const {
  return LanguageParser::RuleFunctionDeclaration;
}

void LanguageParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void LanguageParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}

LanguageParser::FunctionDeclarationContext* LanguageParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, LanguageParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(LanguageParser::T__3);
    setState(57);
    match(LanguageParser::ID);
    setState(58);
    match(LanguageParser::T__4);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LanguageParser::ID) {
      setState(59);
      parameterList();
    }
    setState(62);
    match(LanguageParser::T__5);
    setState(63);
    match(LanguageParser::T__6);
    setState(64);
    type();
    setState(65);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

LanguageParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::AssignmentContext::ID() {
  return getToken(LanguageParser::ID, 0);
}

LanguageParser::ExpressionContext* LanguageParser::AssignmentContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}


size_t LanguageParser::AssignmentContext::getRuleIndex() const {
  return LanguageParser::RuleAssignment;
}

void LanguageParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void LanguageParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

LanguageParser::AssignmentContext* LanguageParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 8, LanguageParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(LanguageParser::ID);
    setState(68);
    match(LanguageParser::T__7);
    setState(69);
    expression();
    setState(70);
    match(LanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopStatementContext ------------------------------------------------------------------

LanguageParser::LoopStatementContext::LoopStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::AssignmentContext *> LanguageParser::LoopStatementContext::assignment() {
  return getRuleContexts<LanguageParser::AssignmentContext>();
}

LanguageParser::AssignmentContext* LanguageParser::LoopStatementContext::assignment(size_t i) {
  return getRuleContext<LanguageParser::AssignmentContext>(i);
}

LanguageParser::ConditionContext* LanguageParser::LoopStatementContext::condition() {
  return getRuleContext<LanguageParser::ConditionContext>(0);
}

LanguageParser::BlockContext* LanguageParser::LoopStatementContext::block() {
  return getRuleContext<LanguageParser::BlockContext>(0);
}


size_t LanguageParser::LoopStatementContext::getRuleIndex() const {
  return LanguageParser::RuleLoopStatement;
}

void LanguageParser::LoopStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoopStatement(this);
}

void LanguageParser::LoopStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoopStatement(this);
}

LanguageParser::LoopStatementContext* LanguageParser::loopStatement() {
  LoopStatementContext *_localctx = _tracker.createInstance<LoopStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, LanguageParser::RuleLoopStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LanguageParser::T__8: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        match(LanguageParser::T__8);
        setState(73);
        match(LanguageParser::T__4);
        setState(74);
        assignment();
        setState(75);
        condition();
        setState(76);
        match(LanguageParser::T__2);
        setState(77);
        assignment();
        setState(78);
        match(LanguageParser::T__5);
        setState(79);
        block();
        break;
      }

      case LanguageParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        match(LanguageParser::T__9);
        setState(82);
        match(LanguageParser::T__4);
        setState(83);
        condition();
        setState(84);
        match(LanguageParser::T__5);
        setState(85);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStatementContext ------------------------------------------------------------------

LanguageParser::PrintStatementContext::PrintStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::PrintStatementContext::STRING() {
  return getToken(LanguageParser::STRING, 0);
}

std::vector<LanguageParser::ExpressionContext *> LanguageParser::PrintStatementContext::expression() {
  return getRuleContexts<LanguageParser::ExpressionContext>();
}

LanguageParser::ExpressionContext* LanguageParser::PrintStatementContext::expression(size_t i) {
  return getRuleContext<LanguageParser::ExpressionContext>(i);
}


size_t LanguageParser::PrintStatementContext::getRuleIndex() const {
  return LanguageParser::RulePrintStatement;
}

void LanguageParser::PrintStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStatement(this);
}

void LanguageParser::PrintStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStatement(this);
}

LanguageParser::PrintStatementContext* LanguageParser::printStatement() {
  PrintStatementContext *_localctx = _tracker.createInstance<PrintStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, LanguageParser::RulePrintStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(LanguageParser::T__10);
    setState(90);
    match(LanguageParser::T__4);
    setState(91);
    match(LanguageParser::STRING);
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LanguageParser::T__11) {
      setState(92);
      match(LanguageParser::T__11);
      setState(93);
      expression();
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(99);
    match(LanguageParser::T__5);
    setState(100);
    match(LanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

LanguageParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::ExpressionContext* LanguageParser::ReturnStatementContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}


size_t LanguageParser::ReturnStatementContext::getRuleIndex() const {
  return LanguageParser::RuleReturnStatement;
}

void LanguageParser::ReturnStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStatement(this);
}

void LanguageParser::ReturnStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStatement(this);
}

LanguageParser::ReturnStatementContext* LanguageParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, LanguageParser::RuleReturnStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(LanguageParser::T__12);
    setState(103);
    expression();
    setState(104);
    match(LanguageParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

LanguageParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::StatementContext *> LanguageParser::BlockContext::statement() {
  return getRuleContexts<LanguageParser::StatementContext>();
}

LanguageParser::StatementContext* LanguageParser::BlockContext::statement(size_t i) {
  return getRuleContext<LanguageParser::StatementContext>(i);
}


size_t LanguageParser::BlockContext::getRuleIndex() const {
  return LanguageParser::RuleBlock;
}

void LanguageParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void LanguageParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

LanguageParser::BlockContext* LanguageParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, LanguageParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(LanguageParser::T__13);
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2147495442) != 0)) {
      setState(107);
      statement();
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(113);
    match(LanguageParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

LanguageParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::ParameterContext *> LanguageParser::ParameterListContext::parameter() {
  return getRuleContexts<LanguageParser::ParameterContext>();
}

LanguageParser::ParameterContext* LanguageParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<LanguageParser::ParameterContext>(i);
}


size_t LanguageParser::ParameterListContext::getRuleIndex() const {
  return LanguageParser::RuleParameterList;
}

void LanguageParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void LanguageParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}

LanguageParser::ParameterListContext* LanguageParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 18, LanguageParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    parameter();
    setState(120);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LanguageParser::T__11) {
      setState(116);
      match(LanguageParser::T__11);
      setState(117);
      parameter();
      setState(122);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

LanguageParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::ParameterContext::ID() {
  return getToken(LanguageParser::ID, 0);
}

LanguageParser::TypeContext* LanguageParser::ParameterContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}


size_t LanguageParser::ParameterContext::getRuleIndex() const {
  return LanguageParser::RuleParameter;
}

void LanguageParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void LanguageParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}

LanguageParser::ParameterContext* LanguageParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 20, LanguageParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(LanguageParser::ID);
    setState(124);
    match(LanguageParser::T__1);
    setState(125);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

LanguageParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::ExpressionContext *> LanguageParser::ConditionContext::expression() {
  return getRuleContexts<LanguageParser::ExpressionContext>();
}

LanguageParser::ExpressionContext* LanguageParser::ConditionContext::expression(size_t i) {
  return getRuleContext<LanguageParser::ExpressionContext>(i);
}

LanguageParser::ComparisonOpContext* LanguageParser::ConditionContext::comparisonOp() {
  return getRuleContext<LanguageParser::ComparisonOpContext>(0);
}


size_t LanguageParser::ConditionContext::getRuleIndex() const {
  return LanguageParser::RuleCondition;
}

void LanguageParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void LanguageParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}

LanguageParser::ConditionContext* LanguageParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 22, LanguageParser::RuleCondition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    expression();
    setState(128);
    comparisonOp();
    setState(129);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

LanguageParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::TermContext *> LanguageParser::ExpressionContext::term() {
  return getRuleContexts<LanguageParser::TermContext>();
}

LanguageParser::TermContext* LanguageParser::ExpressionContext::term(size_t i) {
  return getRuleContext<LanguageParser::TermContext>(i);
}

std::vector<tree::TerminalNode *> LanguageParser::ExpressionContext::ADD() {
  return getTokens(LanguageParser::ADD);
}

tree::TerminalNode* LanguageParser::ExpressionContext::ADD(size_t i) {
  return getToken(LanguageParser::ADD, i);
}

std::vector<tree::TerminalNode *> LanguageParser::ExpressionContext::SUB() {
  return getTokens(LanguageParser::SUB);
}

tree::TerminalNode* LanguageParser::ExpressionContext::SUB(size_t i) {
  return getToken(LanguageParser::SUB, i);
}

